<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Indiabana</string>
    <string name="log_in">Log in</string>
    <string name="log_in_short">Log in</string>
    <string name="you_are_maria">You are Maria?</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="you_do_not_have_an_account">You do not have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_maria">Hello Maria</string>
    <string name="my_account">My account</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="my_shopping">My shopping</string>
    <string name="my_sales">My sales</string>
    <string name="alliances">Alliances</string>
    <string name="to_post">To post</string>
    <string name="billing">Billing</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="links_of_interest">Links of interest</string>
    <string name="advertise_in_indiabana">Advertise in Indiabana</string>
    <string name="how_does_indiabana_work">How does Indiabana work?</string>
    <string name="about_indiabana">About Indiabana</string>
    <string name="rate_app">Rate app</string>
    <string name="indiabana_v1_0_0">Indiabana V1.0.0</string>
    <string name="o">O</string>
    <string name="see_all">See all</string>
    <string name="sort_by">Sort by</string>
    <string name="all_the_states">All the states</string>
    <string name="higher_amount_first">Higher amount first</string>
    <string name="lower_amount_first">Lower amount first</string>
    <string name="most_recent">Most recent</string>
    <string name="in_process">In process</string>
    <string name="sent">Sent</string>
    <string name="in_mediation">In mediation</string>
    <string name="price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="status">Status:</string>
    <string name="amt">Amt.:</string>
    <string name="client">Client:</string>
    <string name="rate">Rate</string>
    <string name="comment">Leave your comments about the iCarrier</string>
    <string name="rate_activity_heading">Rate your iCarrier</string>
    <string name="package_delivered">Package Delivered:</string>
    <string name="add_product">Add product</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="ej_smarttv_lg_42_wifi">Ej. SmartTV LG 42” WiFi</string>
    <string name="discard">Discard</string>
    <string name="continue_post">Continue</string>
    <string name="discover_a_new_nway_to_sell">Discover a new\nway to sell</string>
    <string name="i_need_help">I need help</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="home_appliance">Home Appliances</string>
    <string name="explora_por_categor_a">Explore by Categories</string>
    <string name="consolas_y_videojuegos">Consoles and Video Games</string>
    <string name="featured_selleres">Features Sellers</string>
    <string name="register_userName">Name</string>
    <string name="register_sign_up">Sign up</string>
    <string name="register_privacy_policy">By registering I accept the privacy policy and the terms and conditions of Indiabana</string>
    <string name="register">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_register">Log in</string>
    <string name="new_password">New Password</string>
    <string name="password_update">Password update</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="update_button">Update</string>
    <string name="available_for_withdrawal">Available for withdrawal</string>
    <string name="withdraw">Withdraw</string>
    <string name="total">Total:</string>
    <string name="available">Available:</string>
    <string name="pending">Pending:</string>
    <string name="mediation">Mediation:</string>
    <string name="account_setting_buyer_seller_name">Names</string>
    <string name="account_setting_buyer_seller_Maria_Alegendra">Maria Alegendra</string>
    <string name="account_setting_buyer_seller_last_name">Last Names</string>
    <string name="add_bank_account">Add bank account</string>
    <string name="start_withdrawal">Start withdrawal</string>
    <string name="add_new_payment_charge_method">Add new payment / charge method</string>
    <string name="return_text">Return</string>
    <string name="we_need_to_verify_your_identity_before_adding_a_new_withdrawal_method">We need to verify your identity before adding a new withdrawal method.</string>
    <string name="enter_the_code_received_on_your_phone">Enter the code received on your phone.</string>
    <string name="bank">Bank</string>
    <string name="card">Card</string>
    <string name="you_can_use_this_card_to_pay_for_your_purchases">You can use this card to pay for your purchases</string>
    <string name="card_number">Card number</string>
    <string name="cardholder">Cardholder</string>
    <string name="write_the_name_of_the_cardholder">Write the name of the cardholder</string>
    <string name="telephone">Telephone</string>
    <string name="expiration">Expiration</string>
    <string name="mm_aa">MM / AA</string>
    <string name="cvv">CVV</string>
    <string name="eg_233">Eg. 233</string>
    <string name="primary_payment_method">Primary payment method</string>
    <string name="billing_address">Billing Address</string>
    <string name="select_or_add_the_billing_address">Select or add the billing address</string>
    <string name="save">Save</string>
    <string name="you_can_use_this_bank_to_withdraw_your_sales_earnings">You can use this bank to withdraw your sales earnings</string>
    <string name="select_your_bank">Select your Bank</string>
    <string name="account_number">Account number</string>
    <string name="write_your_bank_account_number">Write your bank account number</string>
    <string name="account_holder">Account holder</string>
    <string name="enter_the_name_of_the_account_holder">Enter the name of the Account Holder</string>
    <string name="cuil">CUIL</string>
    <string name="write_the_cuil_associated_with_the_account">Write the CUIL associated with the account</string>
    <string name="select_your_account_type">Select your account type</string>
    <string name="account_type">Account type</string>
    <string name="main_withdrawal_method">Main withdrawal method</string>
    <string name="account_setting_buyer_seller_Benedetti_Salvatore">Benedetti Salvatore</string>
    <string name="account_setting_buyer_seller_DNI">DNI</string>
    <string name="account_setting_buyer_seller_number">123456789</string>
    <string name="account_setting_buyer_seller_check">Check</string>
    <string name="account_setting_buyer_seller_cuit">Cuit</string>
    <string name="account_setting_buyer_seller_no_information">No information</string>
    <string name="account_setting_buyer_seller_contact_info">Contact information</string>
    <string name="account_setting_buyer_seller_email_txt">Email</string>
    <string name="account_setting_buyer_seller_emailId">mariabennedetti123@gmail.com</string>
    <string name="account_setting_buyer_seller_telephone_txt">Telephone</string>
    <string name="account_setting_buyer_seller_telephone_value">549 3201 023 013</string>
    <string name="account_setting_buyer_seller_password">Password</string>
    <string name="account_setting_buyer_seller_last_updated">Last update about 6 month ago</string>
    <string name="account_setting_buyer_seller_payment_method">Payment methods / Charge</string>
    <string name="account_setting_buyer_seller_card">Card</string>
    <string name="account_setting_buyer_seller_Visa_card">Visa terminada 5400</string>
    <string name="account_setting_buyer_seller_bank">Bank</string>
    <string name="account_setting_buyer_seller_bank_name">BBVA C. Cheques terminada en 1234</string>
    <string name="account_setting_buyer_seller_Anadir_metodo">Anadir metodo</string>
    <string name="account_setting_buyer_seller_new_payment_method">Affiliate a new payment method / Charge</string>
    <string name="account_setting_buyer_seller_addresses">Addresses</string>
    <string name="account_setting_buyer_seller_purchase">Purchase</string>
    <string name="account_setting_buyer_seller_delivery_address">Av. 12 con calle 5 y 3, San Telmo. CABA, Buenos Aires</string>
    <string name="account_setting_buyer_seller_sales_alliance">Sales / alliances</string>
    <string name="account_setting_buyer_seller_add_address">Add Address</string>
    <string name="account_setting_buyer_seller_add_new_address">Add a new address to buy or sell</string>
    <string name="personal_information">Personal information</string>
    <string name="store_management">Store management</string>
    <string name="inventory">Inventory</string>
    <string name="manage_all_posts">Manage all posts</string>
    <string name="add_new_address">Add new address</string>
    <string name="promote_product">Promote product</string>
    <string name="get_more_reach_and_sell_more">Get more reach and sell more</string>
    <string name="reputation">Reputation</string>
    <string name="check_your_reputation">Check your reputation</string>
    <string name="notifications_preferences">Notifications preferences</string>
    <string name="configure_when_you_want_to_receive_notifications">Configure when you want to receive notifications</string>
    <string name="log_out">Log out</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="alliances_help_fragment">Alliances</string>
    <string name="payments_charges_and_billing">Payments, charges and billing</string>
    <string name="shipping">Shipping:</string>
    <string name="account_security">Account security</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="food">Food</string>
    <string name="Clothing">Clothing</string>
    <string name="accessories">Accessories</string>
    <string name="technology">Technology</string>
    <string name="babies">Babies</string>
    <string name="home_acc">Home</string>
    <string name="commitments">Commitments</string>
    <string name="my_alliances">My Alliances</string>
    <string name="requests">Requests</string>
    <string name="potential_alliances">Potential Alliances</string>
    <string name="type_of_commitment">Type of Commitment</string>
    <string name="ally">Ally</string>
    <string name="promote">"Promote"</string>
    <string name="increase_your_sales">Increase your sales</string>
    <string name="select_the_publication_to_promote">Select the publication to promote</string>
    <string name="search_publication">Search publication</string>
    <string name="tell_us_how_your_purchase_went">Tell us how your purchase went</string>
    <string name="i_have_the_package_and_it_s_fine">I have the package and it\'s fine</string>
    <string name="i_have_the_package_but_there_is_a_problem">I have the package but there is a problem</string>
    <string name="i_don_t_have_the_package">I don\'t have the package</string>
    <string name="excellent_your_opinion_has_been_published">Excellent! Your opinion has been published.</string>
    <string name="do_you_want_to_add_a_tip">Do you want to add a tip?</string>
    <string name="no_thanks">No, thanks</string>
    <string name="yes_tip">Yes, tip</string>
    <string name="cancel">Cancel</string>
</resources>