<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_card_number"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="-         -         -         -         -" />

        <EditText
            android:id="@+id/e_card_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_card_holder"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/write_the_name_of_the_cardholder" />

        <EditText
            android:id="@+id/et_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_telephone"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="(           )       -         -" />

        <ImageView
            android:id="@+id/iv_btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_telephone"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_btn_guardar" />

        <LinearLayout
            android:id="@+id/ll_card_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e_card_holder_name"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/expiration"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/mm_aa" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cvv"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/eg_233" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:src="@drawable/ic_credit_card_with_cvv_code" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_card_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_card_number"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/cardholder"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_use_card_to_pay"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/card_number"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_use_card_to_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/you_can_use_this_card_to_pay_for_your_purchases"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_card_detail"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/telephone"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_primary_payment_methode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_telephone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/iv_btn_guardar"
            android:fontFamily="@font/roboto"
            android:text="@string/primary_payment_method"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_billing_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_primary_payment_methode"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/billing_address"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_select_or_add_billing_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_billing_address"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/select_or_add_the_billing_address"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/billing_addres_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_select_or_add_billing_address"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/indiabana_orange_rounder_corner_bg"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/account_setting_buyer_seller_delivery_address"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/billing_addres_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_addres_1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/comment_box_background"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/account_setting_buyer_seller_delivery_address"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/billing_addres_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_addres_2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/comment_box_background"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/account_setting_buyer_seller_delivery_address"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_add_new_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_addres_3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/comment_box_background"
            android:drawableEnd="@drawable/ic_mdi_keyboard_arrow_right_black"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/add_new_address"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_add_new_address"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            app:backgroundTint="@color/bill_rv_item_status_red" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_add_new_address"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:backgroundTint="@color/indiabana_orange" />
    </RelativeLayout>
</ScrollView>