<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/white">


    <ImageView
        android:id="@+id/img_1"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/check_ok" />

    <TextView
        android:id="@+id/opinion_posted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:layout_below="@+id/img_1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/excellent_your_opinion_has_been_published"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/want_to_add_tip"
        android:layout_width="wrap_content"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opinion_posted"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/do_you_want_to_add_a_tip"
        android:textColor="#000000"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/want_to_add_tip"
        android:backgroundTint="@color/white"
        android:text="@string/no_thanks"
        android:textColor="@color/indiabana_orange" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yes_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/want_to_add_tip"
        android:layout_alignParentRight="true"
        android:text="@string/yes_tip"
        android:paddingVertical="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:backgroundTint="@color/indiabana_orange"
        app:cornerRadius="5dp"
        />

</RelativeLayout>